--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 <link href="/client/dist/index.css" rel="stylesheet"></head>
 <body>
     <div id="app"></div>
-<script type="text/javascript" src="/client/dist/dll.vendor.js"></script><script type="text/javascript" src="/client/dist/vendor.js"></script><script type="text/javascript" src="/client/dist/index.js"></script></body>
+<script type="text/javascript" src="/client/dist/dll.vendor.js"></script>
+<script type="text/javascript" src="/client/dist/vendor.js"></script>
+<script type="text/javascript" src="/client/dist/index.js"></script>
+</body>
 </html>
